--- a/app/static/default.css
+++ b/app/static/default.css
@@ -519,6 +519,7 @@ input[type='submit'] {
 }
 
 .reply-container {
+    display: none;
     margin-top: 1em;
     margin-bottom: 1em;
     padding: 0.5em;
