--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -97,7 +97,7 @@
         <div class="post-footer">
             <!-- POST OPTIONS MENU -->
             {% if p.author == current_user %}
-                <td><svg class="post-options-button" onclick="toggleColor(this, 'rgb(var(--color-text))', 'rgb(var(--color-highlight))'); toggleElDisplay('post-options-menu', this)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.96 122.88">
+                <td><svg class="post-options-button" onclick="toggleColor(this, 'rgb(var(--color-text))', 'rgb(var(--color-highlight))'); toggleElDisplay('post-options-menu', this, 'post-footer')" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.96 122.88">
                         <title>Options</title>
                         <path d="M15,0A15,15,0,1,1,0,15,15,15,0,0,1,15,0Zm0,92.93a15,15,0,1,1-15,15,15,15,0,0,1,15-15Zm0-46.47a15,15,0,1,1-15,15,15,15,0,0,1,15-15Z"/>
                     </svg></td>
@@ -125,7 +125,7 @@
         {{ post_int.post_id(value=p.id) }}
         
         <!-- COMMENT BUTTON -->
-        <div class="svg-icon-container clickable comment-icon" onclick="toggleElDisplay('reply-container', this); displayComments(this)">
+        <div class="svg-icon-container clickable comment-icon" onclick="toggleElDisplay('reply-container', this, 'post-info-form'); displayComments(this)">
             {{ comment_icon() }}
         </div>
         <span class="comment-count">{{ p.replies.count() }}</span>
