--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -60,6 +60,15 @@
             </tr>
         </table>
 
+        <div class="select-category-container">
+            Select categories to stalk
+            <div class="categories-container">
+                <form class="form-stalk" action="" method="POST" enctype="multipart/form-data">
+                </form>
+            </div>
+            </p>
+        </div>
+
         {% if desc %}
             <hr>
             <!-- Profile description -->
