--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -19,7 +19,7 @@
 {% block content %}
     <!-- Profile info bar -->
     <div class="prof-info-container">
-        {% if category and category != "none" %}
+        {% if category and category != "default" %}
             <div class="prof-info-title">{{ category }}</div>
         {% endif %}
         <table class="prof-info-bar">
