--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -60,18 +60,22 @@
             </tr>
         </table>
 
-        <div class="select-category-container">
-            Select categories to stalk
-            <div class="categories-container">
-                <form class="form-stalk" action="" method="POST" enctype="multipart/form-data">
-                    <input type="hidden" name="user_id" value="{{ user.id }}">
-                    {% for c in user.categories %}
-                        <input type="checkbox" name="{{ c.id }}"> {{ c.name }}
-                    {% endfor %}
-                    <button type="button" onclick=(processStalking(this))>submit</button>
-                </form>
+        {% if user != current_user %}
+            <div class="select-category-container">
+                Select categories to stalk
+                <div class="categories-container">
+                    <form class="form-stalk" action="" method="POST" enctype="multipart/form-data">
+                        <input type="hidden" name="user_id" value="{{ user.id }}">
+                        {% for c in user.categories %}
+                            <div class="category-checkbox-container"><input type="checkbox" name="{{ c.id }}"> {{ c.name }}</div>
+                        {% endfor %}
+                        <div style="margin-top: 1em;">
+                            <button type="button" onclick=(processStalking(this))>submit</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
+        {% endif %}
 
         {% if desc %}
             <hr>
