--- a/app/static/default.css
+++ b/app/static/default.css
@@ -582,3 +582,11 @@ textarea:focus, input:focus {
     width: 100%;
     height: 2em;
 }
+
+.comment-date {
+    padding: 1em;
+    padding-bottom: 0;
+    width: 100%;
+    background-color: rgb(var(--color-header-gray));
+    box-sizing: border-box;
+}
