--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -155,6 +155,7 @@
 <!-- USER COMMENT POST -->
 {% macro user_comment(c, submission) -%}
     <div class="post comment {{ 'op' if c.author == submission.author else 'not-op' }}" style="margin-bottom:1em;">
+        <div class="small-text comment-date">{{ c.timestamp.strftime("%a, %d %b %Y, %I:%M:%S %p") }}</div>
         <div class="post-desc">
             <div class="post-user-container">
                 {{ user_avatar_linked(c.author) }}<br>
