Removed categories parameter from link

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,8 +22,8 @@
     <div class="dashboard-quick-links">
         <a href="{{ url_for('categories') }}">Manage categories</a><br>
         <a href="{{ url_for('liked_posts') }}">Liked posts</a><br>
-        <a href="{{ url_for('stalklist', username = current_user.username, category = 'none', rel = 'stalking') }}">My stalklist</a><br>
-        <a href="{{ url_for('stalklist', username = current_user.username, category = 'none', rel = 'stalkers') }}">My stalkers</a><br>
+        <a href="{{ url_for('stalklist', username = current_user.username, rel = 'stalking') }}">My stalklist</a><br>
+        <a href="{{ url_for('stalklist', username = current_user.username, rel = 'stalkers') }}">My stalkers</a><br>
     </div>
 
     {% for post in stalked_posts %}
