Removed margins on select categories container

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -60,6 +60,7 @@
             </tr>
         </table>
 
+        <!-- Categories select -->
         {% if user != current_user %}
             <div class="select-category-container">
                 Select categories to stalk
