--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -81,6 +81,11 @@
                     </form>
                 </div>
             </div>
+            {% if current_user.is_stalking(user) %}
+                <div style="padding:1em; padding-top:0;">
+                    <span class="clickable highlight hover-highlight">Manage categories</span>
+                </div>
+            {% endif %}
         {% endif %}
 
         {% if desc %}
