--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -40,6 +40,7 @@
                                 <form action="" method="POST" enctype="multipart/form-data">
                                     {{ button_stalk.hidden_tag() }}
                                     {{ button_stalk.submit(id = "button-stalk", 
+                                                        class_ = "button-dark-highlight" if current_user.is_stalking(user) else "button-highlight",
                                                         value = "unstalk" if current_user.is_stalking(user) else "stalk", 
                                                         onclick = "return onClickStalk(this)") }}
                                 </form>
@@ -58,8 +59,14 @@
             </tr>
         </table>
 
-        <!-- Categories select -->
         {% if user != current_user %}
+            {% if current_user.is_stalking(user) %}
+                <div id="manage-category-container" style="padding:1em; padding-top:0;">
+                    <span class="clickable highlight hover-highlight" onclick="toggleElDisplay('select-category-container');">Manage categories</span>
+                </div>
+            {% endif %}
+
+            <!-- Categories select -->
             <div id="select-category-container">
                 Select categories to stalk
                 <div class="categories-container">
@@ -72,20 +79,19 @@
                                     {% else %}
                                         <input type="checkbox" name="{{ c.id }}" autocomplete="off">
                                     {% endif %}
-                                    {{ c.name }}
+                                    {{ c.name }} {{ stalkback_logo() if c in current_user.stalked_categories }}
                                 </div>
                             {% endfor %}
                         <div style="margin-top: 1em;">
-                            <button type="button" onclick=(processStalking())>confirm</button>
+                            {% if current_user.is_stalking(user) %}
+                                <button class="input-button-standard" type="button" onclick="updateCategoriesStalking()">update</button>
+                            {% else %}
+                                <button class="input-button-standard" type="button" onclick="processStalking(); updateCategoriesStalking();">confirm</button> 
+                            {% endif %}
                         </div>
                     </form>
                 </div>
             </div>
-            {% if current_user.is_stalking(user) %}
-                <div style="padding:1em; padding-top:0;">
-                    <span class="clickable highlight hover-highlight">Manage categories</span>
-                </div>
-            {% endif %}
         {% endif %}
 
         {% if desc %}
