--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -88,6 +88,7 @@
                             {% else %}
                                 <button class="input-button-standard" type="button" onclick="processStalking(); updateCategoriesStalking();">confirm</button> 
                             {% endif %}
+                            <span id="update-text-timed" class="timed-text-hidden small-text highlight" style="padding-left:0.5em;">Updated!</span>
                         </div>
                     </form>
                 </div>
