--- a/app/static/default.css
+++ b/app/static/default.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Poppins&family=Righteous&family=Ubuntu:wght@500&display=swap');
 
+/* VARIABLES */
 :root {
     --color-bg: 96, 110, 130;
     --color-header: 41, 43, 51;
@@ -14,6 +15,7 @@
     --font-main: 'Open Sans', sans-serif;
 }
 
+/* GENERAL */
 body, html {
     height: 100%;
     font-family: var(--font-main);
@@ -55,28 +57,25 @@ textarea:focus, input:focus {
     border: 0.15em solid rgb(var(--color-highlight));
 }
 
+.text-area-form textarea {
+    width: 80vw;
+    font-family: var(--font-main);
+}
+
+.icon-med {
+    width: 2em !important;
+}
+
 .small-text {
     font-size: 0.8em;
 }
 
+.smaller-text {
+    font-size: 0.7em;
+}
+
 .default-text {
     color: rgb(var(--color-text));
-}
-
-@keyframes anim-timed-text {
-    0% {opacity: 1;}
-    70% {opacity: 1;}
-    100% {opacity: 0;}
-}
-
-.timed-text-hidden {
-    opacity: 0;
-}
-
-.timed-text-visible {
-    opacity: 0;
-    animation-name: anim-timed-text;
-    animation-duration: 2s;
 }
 
 .highlight {
@@ -91,6 +90,24 @@ textarea:focus, input:focus {
     color: rgb(var(--color-link-highlight));
 }
 
+.timed-text-hidden {
+    opacity: 0;
+}
+
+.timed-text-visible {
+    opacity: 0;
+    animation-name: anim-timed-text;
+    animation-duration: 2s;
+}
+
+/* ANIMATIONS */
+@keyframes anim-timed-text {
+    0% {opacity: 1;}
+    70% {opacity: 1;}
+    100% {opacity: 0;}
+}
+
+/* BASE PAGE LAYOUT */
 .content-container {
     padding: 1em;
     background: rgb(var(--color-bg));
@@ -191,18 +208,22 @@ textarea:focus, input:focus {
     width: 1.5em;
 }
 
+.comment-icon-small {
+    width: 1em;
+}
+
 .like-button {
     background-color: transparent;
     border: none;
     padding: 0;
 }
 
-.like-icon {
-    width: 2em;
-}
-
 .liked-icon {
     fill: rgb(var(--color-highlight))
+}
+
+.liked-icon-small {
+    width: 1.3em;
 }
 
 .flashes-container {
@@ -419,6 +440,7 @@ textarea:focus, input:focus {
     border: 0.2em solid rgb(var(--color-header-gray));
 }
 
+/* POSTS */
 .post-title-container {
     background-color: rgb(var(--color-header));
     padding: 1em;
@@ -448,24 +470,6 @@ textarea:focus, input:focus {
 
 .post-desc-container {
     padding-left: 1em;
-}
-
-.comment {
-    border-left: 0.4em solid rgb(var(--color-bg));
-}
-
-.comment.op {
-    border-left: 0.4em solid rgb(var(--color-highlight));
-}
-
-.comment-username.not-op a {
-    color: rgb(var(--color-text));
-}
-
-.comment .post-footer {
-    background-color: rgb(var(--color-header-darkgray));
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
 }
 
 .post-footer {
@@ -511,10 +515,85 @@ textarea:focus, input:focus {
     color: rgb(var(--color-highlight));
 }
 
-.text-area-form textarea {
-    width: 80vw;
-    font-family: var(--font-main);
+.post-info-form-container {
+    background: red;
+    height: 100px;
 }
+
+/* COMMENTS */
+.comment {
+    border-left: 0.4em solid rgb(var(--color-bg));
+}
+
+
+.comment.op {
+    border-left: 0.4em solid rgb(var(--color-highlight));
+}
+
+.comment-username {
+    font-weight: bold;
+}
+
+.comment-username.not-op a {
+    color: rgb(var(--color-text));
+}
+
+.comment-header {
+    padding: 0.5em;
+    padding-bottom: 0;
+    width: 100%;
+    background-color: rgb(var(--color-header-gray));
+    box-sizing: border-box;
+}
+
+.comment-header td {
+    padding-right: 0.5em;
+}
+
+.comment-header-tools {
+    float: right;
+}
+
+.comment .post-desc {
+    padding-top: 0;
+    padding-left: 2.2em;
+    padding-bottom: 1em;
+}
+
+.comment .post-footer {
+    background-color: rgb(var(--color-header-darkgray));
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+.comments-container {
+    display: none;
+    padding-top: 1em;
+}
+
+.reply-container {
+    display: none;
+    margin-bottom: 1em;
+    padding: 0.5em;
+}
+
+.reply-container textarea {
+    padding: 0.5em;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: rgb(var(--color-offwhite));
+    border: 0.2em solid transparent;
+}
+
+.reply-container textarea:focus {
+    border: 0.2em solid rgb(var(--color-highlight));
+}
+
+.reply-tools-container {
+    width: 100%;
+    height: 2em;
+}
+
 
 .profile-button {
     padding-left: 0.5em;
@@ -573,6 +652,7 @@ textarea:focus, input:focus {
     display: inline-block;
 }
 
+/* DASHBOARD */
 .dashboard-header {
     background-color: rgb(var(--color-header))
 }
@@ -580,40 +660,4 @@ textarea:focus, input:focus {
 .dashboard-quick-links {
     background-color: rgb(var(--color-header-gray));
     padding: 1em;
-}
-
-.comments-container {
-    display: none;
-}
-
-.reply-container {
-    display: none;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    padding: 0.5em;
-}
-
-.reply-container textarea {
-    padding: 0.5em;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: rgb(var(--color-offwhite));
-    border: 0.2em solid transparent;
-}
-
-.reply-container textarea:focus {
-    border: 0.2em solid rgb(var(--color-highlight));
-}
-
-.reply-tools-container {
-    width: 100%;
-    height: 2em;
-}
-
-.comment-date {
-    padding: 1em;
-    padding-bottom: 0;
-    width: 100%;
-    background-color: rgb(var(--color-header-gray));
-    box-sizing: border-box;
 }
