Scroll to comments or reply box when comment/reply button is pressed

--- a/app/static/default.css
+++ b/app/static/default.css
@@ -22,6 +22,7 @@ body, html {
     background-color: rgb(var(--color-header));
     color: rgb(var(--color-text));
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 a {
